Overview-Table Improvement: Prevent Wrapping of OAM-Names

--- a/css/table_header_rotate.css
+++ b/css/table_header_rotate.css
@@ -57,6 +57,10 @@ th {
     font-weight: normal;
     text-align: left;
 }
+tr[data-oam] th:first-child
+    /* prevent wrapping of OAM-Name */
+	white-space: nowrap;
+}
 th.singleModules {
     text-align: center;
     vertical-align: bottom;
